--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    font-size: 1em;
+    font-weight: 700;
 }
 
 
@@ -46,22 +48,16 @@ body {
 
 .hamburger-menu {
     display: none;
-
     background: none;
-    border: 1px solid white;
-    border-radius: 4px;
     width: 40px;
     height: 35px;
     padding: 0;
     cursor: pointer;
     flex-direction: column;
-
     justify-content: space-around;
     align-items: center;
     position: relative;
-
-    z-index: 1001;
-    box-sizing: border-box;
+    border: none;
 }
 
 .hamburger-icon {
@@ -69,7 +65,6 @@ body {
     width: 25px;
     height: 3px;
     background-color: white;
-    border-radius: 2px;
     transition: all 0.3s ease-in-out;
 }
 
@@ -183,7 +178,6 @@ body {
         left: 0;
         width: 100%;
         background-color: #1a3a5e;
-        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
         z-index: 1000;
         overflow: hidden;
         transition: max-height 0.3s ease-out;
@@ -367,7 +361,43 @@ label {
 }
 
 @media (max-width: 530px) {
-.navbar-logo img {
-    height: 3vh;
+    /* body{
+        font-size: .5em;
+    } */
+
+    .navbar-logo img {
+        height: 3vh;
+    }
+
+    #schedule-display{
+        margin: 0;
+        padding: 0;
+    }
 }
+
+@media (max-width: 400px) {
+    body{
+        font-size: .8em;
+    }
+    .navbar-logo img {
+        height: 2vh;
+    }
+}
+
+@media (max-width: 340px) {
+    body{
+        font-size: .7em;
+    }
+    .navbar-logo img {
+        height: 2vh;
+    }
+}
+
+@media (max-width: 310px) {
+    body{
+        font-size: .6em;
+    }
+    .navbar-logo img {
+        height: 2vh;
+    }
 }
